syntax = "proto3";

package todoPackage;

service TodoService {

  rpc createTodo(CreateTodoDto) returns (Todo);
  rpc updateTodo(UpdateTodoDto) returns (Todo);
  rpc deleteTodo(DeleteTodoDto) returns (Todo);
  rpc getAllTodos(Empty) returns (Todos);
  
}

message Empty {}

message CreateTodoDto {
  string text = 1;
}

message UpdateTodoDto {
  int32 id = 1;
  string text = 2;
}

message CompleteTodoDto {
  int32 id = 1;
  bool completed = 2;
}

message DeleteTodoDto {
  int32 id = 1;
}

message Todo {
  int32 id = 1;
  string text = 2;
  bool completed = 3;
}

message Todos {
  repeated Todo todos = 1;
}